<resources>
    <string name="app_name">Trade Win</string>
    <string name="title_email">Email or Username</string>
    <string name="hint_email_username">Enter Email or Username</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="text_register"><u>Register</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="label_accounts_settings">TradeWin Account</string>
    <string name="btn_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_repassword">Re-Password</string>
    <string name="check_network">Please check network connection</string>
    <string name="error_json_format">Json format exception</string>
    <string name="error_time_out">Time out</string>
    <string name="key_md5">35b4fa6139b9303f1b001147f698008d</string>
    <string name="notification">Notification</string>
    <string name="reports">Trade Win</string>
    <string name="account">Account</string>
    <string name="header_account_manager">ACCOUNT MANAGER</string>
    <string name="header_trade_win">TRADE WIN</string>
    <string name="title_history">HISTORY</string>
    <string name="header_invitation">INVITATION</string>
    <string name="title_your_signal">Your Signal</string>
    <string name="all_signal">All Signal:</string>
    <string name="running">Running:</string>
    <string name="done_sell">Done sell:</string>
    <string name="stop_loss">Stop loss:</string>
    <string name="title_your_reward">Your Reward</string>
    <string name="bonus">Referral Bonus:</string>
    <string name="donate">Received Donate:</string>
    <string name="vn_token">VN Token:</string>
    <string name="token_available">TW Token Available:</string>
    <string name="token_locked">TW Token Locked:</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="empty_username">Username is not empty</string>
    <string name="empty_email">Email is not empty</string>
    <string name="empty_password">Password is not empty</string>
    <string name="not_match_password">Password not match repassword</string>
    <string name="header_forgot_password">FORGOT PASSWORD</string>
    <string name="value_trade_win">tradewin</string>
    <string name="invite_now"><u>Invite now</u></string>
    <string name="hint_link_ref">Ref Code</string>
    <string name="member_vip">Member Vip</string>
    <string name="member_free">Member Free</string>
    <string name="validate_capcha">Capcha not match</string>
    <string name="email_invalid">Email address invalid</string>
    <string name="empty_capcha">Capcha is not empty</string>
    <string name="header_add_signal">ADD SIGNAL</string>
    <string name="header_balances">BALANCES</string>
    <string name="header_membership">MEMBER SHIP</string>
    <string name="header_staking">STAKING</string>
    <string name="notification_error_ssl_cert_invalid">Do you want to continue anyway?</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_your_balances">Your Balance</string>
</resources>