<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/margin_20dp"
            android:background="@drawable/bg_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                app:layout_constraintBottom_toBottomOf="@id/guidelineCenter"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.3"
                android:orientation="horizontal"
                android:id="@+id/guidelineCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:background="@drawable/bg_edit_text_username"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/padding_edt"
                android:hint="@string/hint_username"
                app:layout_constraintTop_toTopOf="@+id/guidelineCenter"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/edtUsername_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:background="@drawable/bg_edit_text_username"
                android:layout_marginTop="@dimen/margin_15dp"
                android:padding="@dimen/padding_edt"
                android:hint="@string/hint_email"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername_register"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/edtEmail_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_15dp"
                app:layout_constraintTop_toBottomOf="@id/edtEmail_register"
                app:hintEnabled="false"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true"
                android:id="@+id/layoutPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:background="@drawable/bg_edit_text_username"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/padding_edt"
                    android:hint="@string/hint_password"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/edtPassword_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_15dp"
                app:layout_constraintTop_toBottomOf="@id/layoutPassword"
                app:hintEnabled="false"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true"
                android:id="@+id/layoutRePassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:background="@drawable/bg_edit_text_username"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/padding_edt"
                    android:hint="@string/hint_repassword"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/edtRePassword_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/selector_button_login"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/btnRegister"
                android:textAllCaps="false"
                android:text="@string/btn_register"
                android:layout_marginTop="@dimen/margin_20dp"
                app:layout_constraintTop_toBottomOf="@id/layoutRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>