<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/margin_20dp"
            android:background="@drawable/bg_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                app:layout_constraintBottom_toBottomOf="@id/guidelineCenter"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Log In Trade.Win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_percent="0.3"
                android:orientation="horizontal"
                android:id="@+id/guidelineCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:background="@drawable/bg_edit_text_username"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/padding_edt"
                android:hint="@string/hint_email_username"
                app:layout_constraintTop_toTopOf="@+id/guidelineCenter"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_15dp"
                app:layout_constraintTop_toBottomOf="@id/edtUsername"
                app:hintEnabled="false"
                app:errorEnabled="false"
                app:passwordToggleEnabled="true"
                android:id="@+id/layoutPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:background="@drawable/bg_edit_text_username"
                    android:imeOptions="actionDone"
                    android:padding="@dimen/padding_edt"
                    android:hint="@string/hint_password"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
                android:id="@+id/cbRememberme"
                android:textColor="@android:color/white"
                android:text="Remember me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/selector_button_login"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/btnLogin"
                android:textAllCaps="false"
                android:text="Login"
                android:layout_marginTop="@dimen/margin_20dp"
                app:layout_constraintTop_toBottomOf="@id/cbRememberme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_10dp"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                android:text="@string/forgot_password"
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/text_register"
                android:padding="@dimen/margin_10dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:drawablePadding="@dimen/padding_5dp"
                android:drawableLeft="@drawable/ic_baseline_copyright_24"
                android:gravity="center"
                android:text="2020 Trade.win All Rights Reserved"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txtContactSupport"
                android:id="@+id/txtAllRights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:drawablePadding="@dimen/padding_5dp"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_baseline_mail_24"
                app:layout_constraintHorizontal_bias="0"
                android:textColor="@android:color/white"
                android:text="Contact: support@trade.win"
                android:id="@+id/txtContactSupport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txtAllRights"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>